sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: type mismatch;
 found   : Int(0)
 required: Boolean
while (changement>0) {
                  ^