sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
for (i <- getNombreValeurs()-2 to 0 by-1) {
	var changement:Boolean=true
while (changement>0) {
	changement=false
	for (j <- 0 to i) {
		if (plusPetit(j+1,j)==true) {
			echange(j,j+1)
			changement=true
			}
}
	for(l<- i to 0) {
		if (plusPetit(l+1,l)==true) {
			echange(l,l+1)
			changement=true
			}
	}
}
}
}
